--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.6.0
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  email_validator: ^2.1.17
   
 
 dev_dependencies:
