--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   email_validator: ^2.1.17
+  google_sign_in: ^6.2.1
   
 
 dev_dependencies:
