--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,14 @@ dependencies:
   firebase_auth: ^4.16.0
   email_validator: ^2.1.17
   google_sign_in: ^6.2.1
+  cloud_firestore: ^4.14.0
+  webview_flutter: ^4.4.4
+  url_launcher: ^6.2.4
+  flutter_share: ^2.0.0
+  file_picker: ^6.1.1
+  permission_handler: ^11.2.0
+  image_picker: ^1.0.7
+  firebase_storage: ^11.6.3
   
 
 dev_dependencies:
